# c-libtorch

./: CMakeLists.txt  LICENSE  README.md  vcsetup-2019.bat
.github/: FUNDING.yml
cmake/: llvm-mingw-cross.cmake
scripts/: bootstrap-linux-libtorch.sh  bootstrap-linux-pytorch.sh  bootstrap-macos-pytorch.sh
src/: c_libtorch.cc  c_libtorch.h
tests/: CMakeLists.txt  README.md  jit-test.pt  test-c-libtorch.c  test-c-libtorch.cc
